<?xml version="1.0" encoding="utf-8"?>
<!--Posicionar elementos relativos entre sí (debajo encima izquierda derecha de)-->
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_foro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.guia_mail.GuiaMatesMailActivity">

    <TextView
            android:text="@string/gu_a_para_las_actividades_de_matem_ticas"
            android:background="@color/md_indigo_A100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/md_black_1000_50"
            android:id="@+id/textView111"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <!--Permite a los usuarios desplazarse verticalmente a través de su contenido si este excede el tamaño de la pantalla-->
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
        <!--Posicionar elementos relativos entre sí (debajo encima izquierda derecha de)-->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <!--Organiza los elementos en una cuadrícula fija (una sola dirección)-->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                <TextView
                        android:text="@string/reas_y_vol_menes"
                        android:scrollIndicators="bottom"
                        android:textStyle="bold"
                        android:textColor="@color/md_blue_grey_900"
                        android:layout_marginTop="50dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/imagen_geometria"
                        android:id="@+id/imageView"
                        android:contentDescription="@string/imagen_de_geometr_a"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/md_blue_grey_900"
                        android:textStyle="bold|italic"
                        android:text="@string/definicion_primo"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/md_brown_500"
                        android:textStyle="bold|italic"
                        android:text="@string/definicion_mcm"/>
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/descomposici_n_factorial_de_12_y_18"
                        android:id="@+id/imageView1"
                        android:contentDescription="@string/imagen_de_geometr_a"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/md_brown_500"
                        android:textStyle="bold|italic"
                        android:text="@string/mcm"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold|italic"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/md_green_500"
                        android:text="@string/definicion_mcd"/>
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/descomposici_n_factorial_de_18_y_24"
                        android:id="@+id/imageView2"
                        android:contentDescription="@string/imagen_mcd"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/md_green_500"
                        android:textStyle="bold|italic"
                        android:text="@string/mcd"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/md_indigo_A100"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/sugerencias"/>

                <!--Contenedor para coordinar las interacciones entre los elementos secundarios de la interfaz de usuario (animaciones)-->
                <!--Es útil para FloatingActionButton-->
                <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center"
                            android:layout_margin="@dimen/fab_margin"
                            app:backgroundTint="@color/md_indigo_A100"
                            app:elevation="6dp"
                            app:pressedTranslationZ="12dp"
                            android:src="@drawable/imagen_icono_correo"
                            android:id="@+id/fabbotoncitomail"
                            android:contentDescription="@string/imagen_del_e_mail"/>
                </androidx.coordinatorlayout.widget.CoordinatorLayout>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>